# NSBL_bayesian_framework

./: README.md
framework/: .run_ubuntu2204.sh.swp  CMakeCache.txt  CMakeLists.txt  CMakeLists_graham.txt  Makefile  cmake_install.cmake  readme_graham  readme_mint182  readme_ubuntu2204  run_graham.sh  run_mint.sh  run_ubuntu2204.sh
framework/Examples/: CMakeCache.txt  CMakeLists.txt  Makefile  caseSIRS.cfg  caseSIRSse.cfg  clean.sh  cmake_install.cmake  data  functions.cpp  gcase00.cfg  proposedmodels.txt  recompile.sh  run  run_case.sh
framework/Examples/Case_PLOS/: ModelSIRS_Full-state-estimation0.xml  ModelSIRS_SIR-state-estimation0.xml  ModelSIRS_SIRS-state-estimation0.xml  ModelSIRS_SIS-state-estimation0.xml  PlotForecast10.ipynb  PlotPDF.ipynb  PlotSE.ipynb  parse.py
framework/Examples/Case_PLOS/NSBL/: NSBL.ipynb
framework/SE/: makefile
framework/Timing/: makefile
framework/armadillo/include/armadillo_bits/: config.hpp
framework/armadillo/lib/: libarmadillo.so.8.500.1
framework/libconfig/lib/: libconfig++.la  libconfig.la  libconfig.so.11.0.2
framework/libconfig/lib/pkgconfig/: libconfig++.pc
framework/src/: filters.cpp  tmcmc.cpp
framework/state_estimation/: CMakeLists.txt  Makefile  main.cpp  run
framework/unit-tests/: CMakeLists.txt  Makefile
framework/validation/: makefile
framework/validation/KDE/: Makefile  cmake_install.cmake  run
framework/validation/SAMPLING_ERROR/: CMakeLists.txt  Makefile  run
framework/verification/LINEAR/: makefile
framework/verification/MPI_FILTER/: makefile
framework/visualization/: visualisation.py
